# Rag-Ai

./: .gitignore  Dockerfile  README.md  package-lock.json  pyproject.toml  running files  test_keys.py  vercel.json
frontend/: package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/app/admin/: page.tsx
frontend/app/employee/: page.tsx
rag_backend/: app.py
rag_backend/services/: query_service.py  upload_service.py
rag_backend/utils/: embeddings.py  llm.py  parser.py  pinecone_utils.py  s3_utils.py
src/: data_loader.py  search.py
